chandeliers-lus/tests/compile_fail/ui/tc/poly/rebind.stderr
error: Cannot satisfy constraint T = bool introduced here...
  --> tests/compile_fail/ui/tc/poly/rebind.rs:13:26
   |
13 |     let v = alternate(1, true); tel;
   |                          ^^^^
   |
note: ...because a previous bound already enforces T = int
  --> tests/compile_fail/ui/tc/poly/rebind.rs:13:23
   |
13 |     let v = alternate(1, true); tel;
   |                       ^
note: Unable to satisfy the generic bounds on T
  --> tests/compile_fail/ui/tc/poly/rebind.rs:5:20
   |
5  |     node alternate(x, y: T) returns (t: T);
   |                    ^^^^^^^^
